# project-s-server

./: Cargo.toml  Dockerfile  DockerfileDev  README.md  script.txt
database/: Dockerfile  scripts.txt
database/sql/: user.sql
migrations/2023-12-10-043753_sample-db/: up.sql
migrations/2023-12-10-073458_sample_db/: up.sql
scripts/: diesel_clear.sh
src/: main.rs  models.rs  schema.rs
src/auth/: auth.rs
src/connector/: mod.rs
src/connector/main_db/: mod.rs
src/index/: mod.rs
src/lab/: test_server.rs
src/user/: user.rs  user_model.rs
