[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15.7"
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"